--- a/css/jaime.css
+++ b/css/jaime.css
@@ -12,15 +12,169 @@ body{
 	background-color: #018FD3;
 }
 
-.button{
-	display: inline-block;
-    margin: auto;
-    padding-top: 10px;
+hr{
+  color: white;
+}
+
+.link{
+  display: inline-block;
+  margin: auto;
+  padding-top: 10px;
+
+  background-color: #018FD3;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 
 #logo{    
-    color: white;
-    font-size: 61px;
-    text-align: center;
-    padding-top: 82px;
+  color: white;
+  font-size: 61px;
+  text-align: center;
+}
+
+.nav-bar{
+  text-align: center;
+}
+
+.link{
+  color: white;
+}
+
+.main-container{
+    padding-top: 10px;
+    height: 450px;
+    width: 50%;
+    margin: auto;
+}
+
+.container-text{
+  color: white;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  position: absolute;
+  color: white;
+  min-width: 29%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1; 
+  border-bottom: 10px;
+  border-color: white;
+  background-color: #95a5a6;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-button:hover {
+  background-color: #5D565E;
+  border: thick;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: white;
+  /*padding: 15px 32px;*/
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  min-width: 100%;
+}
+
+.dropdown-button{
+
+}
+
+
+
+$red = #F15854;
+$gray = #4D4D4D;
+$blue = #5DA5DA;
+$yellow = #DECF3F;
+$purple = #B276B2;
+$orange = #FAA43A;
+// colors from http://www.mulinblog.com/a-color-palette-optimized-for-data-visualization/
+
+.chart {
+  background: 
+    conic-gradient($red 4%, 
+      $gray 0 8%, 
+      $blue 0 17%,
+      $yellow 0 48%,
+      $purple 0 54%,
+      $orange 0
+    );
+  border-radius: 50%;
+  width: 50%;
+  height: 0;
+  padding-top: 50%;
+  float: left;
+  padding-right: 20px;
+}
+
+.key {
+  width: 50%;
+  float: right;
+  list-style: none;
+  display: table;
+  border-collapse: separate;
+  > li {
+    display: table-row;
+    > * {
+      display: table-cell;
+      border-bottom: 12px solid white;
+    }
+  }
+}
+
+.percent {
+  color: white;
+  padding: 10px 2px;
+  text-shadow: 0 0 1px black;
+  text-align: center;
+}
+.choice {
+  padding-left: 10px;
+}
+
+.red {
+  background: $red;
+}
+.gray {
+  background: $gray;
+}
+.blue {
+  background: $blue;
+}
+.yellow {
+  background: $yellow;
+}
+.purple {
+  background: $purple;
+}
+.orange {
+  background: $orange;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 20px;
+  font-family: sans-serif;
 }
